ingress/my-portfolio-tracker-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nginx-ingress
spec:
    ingressClassName: traefik
    rules:
        - host: my-new-portfolio-tracker.internal
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: nginx-service
                            port:
                                number: 80
